# R2S2R-Block-Stacking

./: .gitignore  README.md
robot_control_pc/: CMakeLists.txt  package.xml
robot_control_pc/calibration/: calibration.yaml  ur5e_realsense_handeye_calibration_eye_on_hand.yaml
robot_control_pc/control/: gripper_action_server.py  robot_motion_action_server.py  robotiq_gripper.py  simple_gripper.py
robot_control_pc/launch/: control_pc.launch
robot_control_pc/nodes/: publish_handeye_tf.py
robot_control_pc/scripts/: push_topple_test_real.py  run_robot_stacking.py
vision_sim_pc/: CMakeLists.txt  package.xml  setup_network.sh
vision_sim_pc/assets/: block_3.usd  block_60mm.stl  block_60mm_original.stl
vision_sim_pc/calibration/: block_masses.json  geometry_offset.json  overhang_test_optimized.json  overhang_test_real.json  push_topple_real.json  push_topple_sim_results.json  sliding_test_results.json
vision_sim_pc/docker/: dockerfile
vision_sim_pc/dt_utils/: grasp.py  json_io.py
vision_sim_pc/etc/: block_stacking_scene.py  convert_block_to_usd.py  domain_randomization.py  generate_aruco_markers.py  get_robot_pose.py  isaac_lab_sync.py  isaac_minimal_spawn.py  isaac_sim_template.py  measure_block_mass.py  measure_geometry_offset.py  overhang_test_real.py  overhang_test_sim.py  policy_search.py  push_topple_test_sim.py  sliding_test_real.py  test_camera_aruco.py
vision_sim_pc/launch/: vision_pc.launch
vision_sim_pc/scripts/: aruco_multiview_scanner.py  run_full_stacking_pipeline.py
vision_sim_pc/scripts/optimal_stacking/: run_policy_search.py
vision_sim_pc/scripts/optimal_stacking/core/: candidates.py  clustering.py  geometry.py  optimizer.py
vision_sim_pc/scripts/optimal_stacking/sim/: environment.py  scene.py
vision_sim_pc/scripts/optimal_stacking/utils/: ros_utils.py
