<?xml version="1.0"?>
<package format="2">
  <name>digital_twin</name>
  <version>0.0.0</version>
  <description>The digital_twin_vision package for Vision/Sim Computer</description>
  <maintainer email="jiminc777@gmail.com">jimin jeon</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>control_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>python-rospkg</exec_depend>

</package>
